--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 </head>
 
 <body>
+  <div id="loading" class="bg-custom-primary">
+    <img id="loading-image" src="./img/loading.svg" alt="Loading..." />
+  </div>
   <header>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top bg-custom-primary py-3">
       <div class="container">
@@ -862,21 +865,21 @@
             </div>
           </div>
           <div class="col-md-6">
-            <form>
+            <form action="POST" data-netlify="true">
               <div class="mb-3">
                 <label lang="tw" for="nameInput" class="form-label">姓名</label>
                 <label lang="en" for="nameInput" class="form-label">Name</label>
-                <input type="text" class="form-control" id="nameInput">
+                <input id="name" name="name" type="text" class="form-control" id="nameInput">
               </div>
               <div class="mb-3">
                 <label lang="tw" for="emailInput" class="form-label">電子郵件</label>
                 <label lang="en" for="emailInput" class="form-label">Email</label>
-                <input type="text" class="form-control" id="emailInput">
+                <input type="text" id="email" name="email" class="form-control">
               </div>
               <div class="mb-3">
                 <label lang="tw" for="msgInput" class="form-label">聯絡訊息</label>
                 <label lang="en" for="msgInput" class="form-label">Message</label>
-                <textarea rows="5" type="text" class="form-control" id="msgInput"></textarea>
+                <textarea type="text" id="message" name="message" class="form-control" rows="5"></textarea>
               </div>
               <a class="btn btn-custom-primary-border btn-lg fw-bold" href="#">
                 <span lang="tw">送出訊息</span>
