change inputs name of form

--- a/index.html
+++ b/index.html
@@ -867,18 +867,18 @@
           <div class="col-md-6">
             <form class="contact-form" action="POST" data-netlify="true">
               <div class="mb-3">
-                <label lang="tw" for="nameInput" class="form-label">姓名</label>
-                <label lang="en" for="nameInput" class="form-label">Name</label>
-                <input id="visitor_name" name="visitor_name" type="text" class="form-control" id="nameInput" required>
+                <label lang="tw" for="visitor_name" class="form-label">姓名</label>
+                <label lang="en" for="visitor_name" class="form-label">Name</label>
+                <input id="visitor_name" name="visitor_name" type="text" class="form-control" required>
               </div>
               <div class="mb-3">
-                <label lang="tw" for="emailInput" class="form-label">電子郵件</label>
-                <label lang="en" for="emailInput" class="form-label">Email</label>
+                <label lang="tw" for="visitor_email" class="form-label">電子郵件</label>
+                <label lang="en" for="visitor_email" class="form-label">Email</label>
                 <input type="text" id="visitor_email" name="visitor_email" class="form-control" required>
               </div>
               <div class="mb-3">
-                <label lang="tw" for="msgInput" class="form-label">聯絡訊息</label>
-                <label lang="en" for="msgInput" class="form-label">Message</label>
+                <label lang="tw" for="visitor_message" class="form-label">聯絡訊息</label>
+                <label lang="en" for="visitor_message" class="form-label">Message</label>
                 <textarea type="text" id="visitor_message" name="visitor_message" class="form-control" rows="5" required></textarea>
               </div>
               <button type="submit" class="btn btn-custom-primary-border btn-lg fw-bold">
