在loading時 固定視窗

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <link href="css/animate.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="fixed-top">
   <div id="loading" class="bg-custom-primary">
     <img id="loading-image" src="./img/loading.svg" alt="Loading..." />
   </div>
