--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Yih Hsuan Hung</title>
   <!-- favicon START  -->
-  <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="./public/assets/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./public/assets/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./public/assets/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./public/assets/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./public/assets/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./public/assets/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./public/assets/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./public/assets/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./public/assets/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./public/assets/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./public/assets/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./public/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./public/assets/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./public/assets/favicon/favicon-16x16.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
@@ -27,8 +27,8 @@
   <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#22939b">
   <!-- favicon END  -->
-  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="../node_modules/jquery-circle-progress/dist/circle-progress.min.js"></script>
+  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="./node_modules/jquery-circle-progress/dist/circle-progress.min.js"></script>
   <!-- slick.js -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <!-- scroll trigger.js -->
@@ -43,7 +43,7 @@
 
 <body class="fixed-top">
   <div id="loading" class="bg-custom-primary">
-    <img id="loading-image" src="./assets/images/loading.svg" alt="Loading..." />
+    <img id="loading-image" src="./public/assets/images/loading.svg" alt="Loading..." />
   </div>
   <header>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top bg-custom-primary py-3">
@@ -251,7 +251,7 @@
         <div class="row col-lg-9 col-md-12 m-auto">
           <div class="aboutme-headshot col-lg-5 col-md-5 text-center">
             <div>
-              <img class="headshot-img" src="./assets/images/selfie.jpg" alt="my-headshot">
+              <img class="headshot-img" src="./public/assets/images/selfie.jpg" alt="my-headshot">
             </div>
             <p class="mt-5">
               <a class="btn btn-custom-primary-border btn-lg fw-bold" href="#">
@@ -528,8 +528,8 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content slider work-slider">
-                <div><img src="./assets/images/biji-1.JPG"></div>
-                <div><img src="./assets/images/biji-2.png"></div>
+                <div><img src="./public/assets/images/biji-1.JPG"></div>
+                <div><img src="./public/assets/images/biji-2.png"></div>
               </div>
               <div class="card-body">
                 <h5 lang="tw" class="card-title fw-bold">筆記商城</h5>
@@ -549,9 +549,9 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content slider work-slider">
-                <div><img src="./assets/images/irms-1.jpg"></div>
-                <div><img src="./assets/images/irms-2.jpg"></div>
-                <div><img src="./assets/images/irms-3.jpg"></div>
+                <div><img src="./public/assets/images/irms-1.jpg"></div>
+                <div><img src="./public/assets/images/irms-2.jpg"></div>
+                <div><img src="./public/assets/images/irms-3.jpg"></div>
               </div>
               <div class="card-body">
                 <h5 lang="tw" class="card-title">智慧回收媒合平台</h5>
@@ -578,9 +578,9 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content slider work-slider">
-                <div><img src="./assets/images/ij-1.jpg"></div>
-                <div><img src="./assets/images/ij-2.jpg"></div>
-                <div><img src="./assets/images/ij-3.jpg"></div>
+                <div><img src="./public/assets/images/ij-1.jpg"></div>
+                <div><img src="./public/assets/images/ij-2.jpg"></div>
+                <div><img src="./public/assets/images/ij-3.jpg"></div>
               </div>
               <div class="card-body">
                 <h5 lang="tw" class="card-title">智慧監獄管理系統</h5>
@@ -598,9 +598,9 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content slider work-slider">
-                <div><img src="./assets/images/gt-1.jpg"></div>
-                <div><img src="./assets/images/gt-2.jpg"></div>
-                <div><img src="./assets/images/gt-3.jpg"></div>
+                <div><img src="./public/assets/images/gt-1.jpg"></div>
+                <div><img src="./public/assets/images/gt-2.jpg"></div>
+                <div><img src="./public/assets/images/gt-3.jpg"></div>
               </div>
               <div class="card-body">
                 <h5 lang="tw" class="card-title">企業ERP系統</h5>
@@ -630,7 +630,7 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content">
-                <img src="./assets/images/weather.jpg">
+                <img src="./public/assets/images/weather.jpg">
               </div>
               <div class="card-body">
                 <h5 class="card-title">Weather App </h5>
@@ -650,7 +650,7 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content">
-                <img src="./assets/images/authlogin.jpg">
+                <img src="./public/assets/images/authlogin.jpg">
               </div>
               <div class="card-body">
                 <h5 class="card-title">React Login with Firebase</h5>
@@ -897,6 +897,6 @@
     </footer>
   </main>
 
-  <script src="../dist/main.bundle.js"></script>
+  <script src="./dist/main.bundle.js"></script>
 </body>
 </html>
