--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         }
       });
   </script>
-  <!-- jquery -->
-  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
-
-  <!-- slick.js -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="./dist/main.bundle.js"></script>
+   <script src="./src/js/jquery.js"></script>
+   <script src="./src/js/ScrollTrigger.min.js"></script>
+   <script src="./src/js/circle-progress.min.js"></script>
+   <script src="./src/js/gsap.min.js"></script>
+   <script src="./src/js/ScrollTrigger.min.js"></script>
+   <script src="./src/js/slick.min.js"></script>
+   <script src="./dist/main.bundle.js"></script>
 </head>
 <body class="fixed-top">
   <div id="loading" class="bg-custom-primary">
@@ -919,6 +919,8 @@
       </div>
     </footer>
   </main>
+ 
+
 </body>
 
 </html>
