調整動畫overflow的問題

--- a/index.html
+++ b/index.html
@@ -296,14 +296,14 @@
 
     <!---------------- My Experience  ---------------->
     <div id="exp_block" class="exp-wrapper  bg-custom-primary">
-      <div class="container py-5">
+      <div class="container py-5  overflow-hidden">
         <div class="row">
           <div class="col-md-7">
             <h1 class="pb-2"><span class="text-custom-primary">▋ </span>My <span
                 class="text-custom-primary fw-bold">Experience</span></h1>
           </div>
         </div>
-        <div class="row pt-5 overflow-hidden">
+        <div class="row pt-5">
           <div class="col-lg-4">
             <div class="card card-1 p-4 h-100">
               <div class="d-flex px-3 align-items-center">
@@ -692,14 +692,14 @@
 
     <!---------------- My Anticipation  ---------------->
     <div id="anticipation_block" class="anticipation-wrapper bg-custom-secondary">
-      <div class="container">
+      <div class="container overflow-hidden">
         <div class="row pt-5">
           <div class="col-md-12">
             <h1 class="pb-2"><span class="text-custom-primary">▋ </span>My <span
                 class="text-custom-primary fw-bold">Anticipation</span></h1>
           </div>
         </div>
-        <div class="row pt-5 overflow-hidden">
+        <div class="row pt-5">
           <div class="anticipation-content col-md-12">
             <div class="vertical-line"></div>
             <ul class="anticipation-list">
