--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="overflow-hidden">
     <div id="home_block" class="main-wrapper bg-custom-primary">
       <div class="container px-5">
         <div class="mb-4 row">
@@ -296,7 +296,7 @@
 
     <!---------------- My Experience  ---------------->
     <div id="exp_block" class="exp-wrapper  bg-custom-primary">
-      <div class="container py-5  overflow-hidden">
+      <div class="container py-5">
         <div class="row">
           <div class="col-md-7">
             <h1 class="pb-2"><span class="text-custom-primary">▋ </span>My <span
@@ -692,7 +692,7 @@
 
     <!---------------- My Anticipation  ---------------->
     <div id="anticipation_block" class="anticipation-wrapper bg-custom-secondary">
-      <div class="container overflow-hidden">
+      <div class="container">
         <div class="row pt-5">
           <div class="col-md-12">
             <h1 class="pb-2"><span class="text-custom-primary">▋ </span>My <span
