移除main js 裡面slick相關code

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </h5>
           </div>
           <div id="person_pic" class="col-lg-5 py-5 text-center">
-            <svg viewBox="0 0 495 490" fill="none" xmlns="http://www.w3.org/2000/svg"
+            <svg viewBox="0 0 495 490" fill="%ffffff" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="&#229;&#164;&#167;&#229;&#167;&#144; 1">
                 <g id="background">
