新增lazy load 的placeholder

--- a/index.html
+++ b/index.html
@@ -537,7 +537,13 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content">
-                <div><img class="lozad"  width="100%" height="auto" data-src="./public/assets/images/biji-1.JPG"></div>
+                <div>
+                  <img class="lozad"  
+                          width="100%" 
+                          height="auto" 
+                          data-placeholder-background="grey"
+                          data-src="./public/assets/images/biji-1.JPG">
+                </div>
               </div>
               <div class="card-body">
                 <h5 lang="tw" class="card-title fw-bold">筆記商城</h5>
@@ -557,7 +563,13 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content">
-                <div><img class="lozad" width="100%" height="auto" data-src="./public/assets/images/irms-1.jpg"></div>
+                <div>
+                  <img class="lozad" 
+                      width="100%" 
+                      height="auto" 
+                      data-placeholder-background="grey"
+                      data-src="./public/assets/images/irms-1.jpg">
+                </div>
               </div>
               <div class="card-body">
                 <h5 lang="tw" class="card-title">智慧回收媒合平台</h5>
@@ -584,7 +596,13 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content">
-                <div><img class="lozad" width="100%" height="auto"  data-src="./public/assets/images/ij-1.jpg"></div>
+                <div>
+                  <img class="lozad" 
+                       width="100%" 
+                       height="auto"  
+                       data-placeholder-background="grey"
+                       data-src="./public/assets/images/ij-1.jpg">
+                </div>
               </div>
               <div class="card-body">
                 <h5 lang="tw" class="card-title">智慧監獄管理系統</h5>
@@ -602,7 +620,13 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content">
-                <div><img class="lozad" width="100%" height="auto"  data-src="./public/assets/images/gt-1.jpg"></div>
+                <div>
+                  <img class="lozad" 
+                       width="100%" 
+                       height="auto"  
+                       data-placeholder-background="grey"
+                       data-src="./public/assets/images/gt-1.jpg">
+                </div>
               </div>
               <div class="card-body">
                 <h5 lang="tw" class="card-title">企業ERP系統</h5>
@@ -632,7 +656,11 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content">
-                <img class="lozad" width="100%" height="auto"  data-src="./public/assets/images/weather.jpg">
+                <img  class="lozad" 
+                      width="100%" 
+                      height="auto"  
+                      data-placeholder-background="grey"
+                      data-src="./public/assets/images/weather.jpg">
               </div>
               <div class="card-body">
                 <h5 class="card-title">Weather App </h5>
@@ -652,7 +680,11 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content">
-                <img class="lozad" width="100%" height="auto"  data-src="./public/assets/images/authlogin.jpg">
+                <img  class="lozad" 
+                      width="100%" 
+                      height="auto" 
+                      data-placeholder-background="grey" 
+                      data-src="./public/assets/images/authlogin.jpg">
               </div>
               <div class="card-body">
                 <h5 class="card-title">React Login with Firebase</h5>
