調整頭貼圖片大小

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </h5>
           </div>
           <div id="person_pic" class="col-lg-5 py-5 text-center">
-            <svg viewBox="0 0 495 490" fill="%ffffff" xmlns="http://www.w3.org/2000/svg"
+            <svg width="495" height="490" viewBox="0 0 495 490" fill="%ffffff" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="&#229;&#164;&#167;&#229;&#167;&#144; 1">
                 <g id="background">
@@ -539,8 +539,6 @@
               <div class="img-content">
                 <div>
                   <img class="lozad"  
-                          width="100%" 
-                          height="auto" 
                           data-placeholder-background="grey"
                           data-src="./public/assets/images/biji-1.JPG">
                 </div>
@@ -565,8 +563,6 @@
               <div class="img-content">
                 <div>
                   <img class="lozad" 
-                      width="100%" 
-                      height="auto" 
                       data-placeholder-background="grey"
                       data-src="./public/assets/images/irms-1.jpg">
                 </div>
@@ -656,9 +652,7 @@
           <div class="col mb-5">
             <div class="card h-100">
               <div class="img-content">
-                <img  class="lozad" 
-                      width="100%" 
-                      height="auto"  
+                <img  class="lozad"  
                       data-placeholder-background="grey"
                       data-src="./public/assets/images/weather.jpg">
               </div>
@@ -681,8 +675,6 @@
             <div class="card h-100">
               <div class="img-content">
                 <img  class="lozad" 
-                      width="100%" 
-                      height="auto" 
                       data-placeholder-background="grey" 
                       data-src="./public/assets/images/authlogin.jpg">
               </div>
