修改css引用位置

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./public/assets/favicon/favicon-16x16.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet"> -->
+  <link rel="stylesheet" href="./src/styles/animate.css" type="text/css">
+  <link rel="stylesheet" href="./src/styles/index.css" type="text/css">
   <meta name="msapplication-TileColor" content="#22939b">
   <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#22939b">
@@ -43,7 +41,6 @@
   <script src="./src/js/ScrollTrigger.min.js"></script>
   <script src="./src/js/circle-progress.min.js" async></script>
   <script src="./src/js/lozad.js"></script>
-
 </head>
 
 <body class="fixed-top">
