修改英文用詞錯誤 新增履歷下載網址

--- a/index.html
+++ b/index.html
@@ -591,9 +591,11 @@
                 alt="my-headshot">
             </div>
             <p class="mt-5">
-              <a class="btn download-cv btn-custom-primary-border btn-lg fw-bold" href="#">
-                <span lang="en">Download CV</span>
+              <a lang="tw" href="https://drive.google.com/file/d/1kZrk5knUNig3lWFu6Am_33nxpoJCQ5ur/view?usp=sharing" class="btn download-cv btn-custom-primary-border btn-lg fw-bold" target="_blank">
                 <span lang="tw">履歷下載</span>
+              </a>
+              <a  lang="en" href="https://drive.google.com/file/d/1_L7UhRiv6R9eDyhoiCScaqzc4d3-1lxW/view?usp=sharing" class="btn download-cv btn-custom-primary-border btn-lg fw-bold" target="_blank">
+                <span lang="en">Download CV</span>
               </a>
             </p>
           </div>
@@ -605,7 +607,7 @@
                 <p lang="tw" class="quote-text fs-5">“ 凡事在成熟之前，都是帶有苦味的。 ”</p>
                 <p lang="en" class="fs-5">After graduation, I started learning programming with online courses. Also, I
                   applied my design background to programming and had worked at a software company as a front-end
-                  development. For my indefatigable and fast-learing capicity, my supervisor always gave me a chance to
+                  development. For my indefatigable and fast-learning capacity, my supervisor always gave me a chance to
                   be involved in developing new features. In future, I will not only devote time and effort in front-end
                   but also try to learn back-end knowledge.
                 </p>
